--- a/app/src/main/res/layout/fragment_bitcoin_chart.xml
+++ b/app/src/main/res/layout/fragment_bitcoin_chart.xml
@@ -37,6 +37,10 @@
         android:id="@+id/bitcoin_data_chart"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
